<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Tuwekememes"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:padding="5dp"
    android:background="@drawable/roundedcornershade20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_upload_image"
        android:id="@+id/txtUploadImage"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtUploadImage"
        android:background="@android:color/white"
        />

    <Button
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:id="@+id/chooseImage"
        android:text="@string/choose_image_to_upload"
        android:textSize="12sp"
        android:layout_below="@id/txtUploadImage"
        android:drawableStart="@drawable/pickimageicon"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/roundedcorner"
        android:foreground="@color/colorWhiteShade50"/>

    <ImageView
        android:id="@+id/memePreview"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_below="@id/chooseImage"
        android:background="@drawable/galleryicon"
        android:contentDescription="@string/todoImageView"
        android:scaleType="fitXY" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/memeDescription"
        android:hint="@string/tupe_kadescription_ya_meme"
        android:textSize="18sp"
        android:layout_below="@id/memePreview"
        android:inputType="text"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uploadProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_below="@+id/memeDescription" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:id="@+id/btnUploadImage"
        android:text="@string/upload_the_image"
        android:textSize="12sp"
        android:layout_below="@id/uploadProgress"
        android:drawableStart="@drawable/uploadicon"
        android:padding="5dp"
        android:background="@drawable/roundedcorner"
        android:foreground="@color/colorWhiteShade50"
        android:textAlignment="center"
        android:layout_centerInParent="true"/>


</RelativeLayout>